# FEUP-DA

./: .gitignore  README.md
Project/: README.md
Project/Code/: CMakeLists.txt  Graph.h  loadGraph.h  main.cpp
Project/Documentation/html/: algorithms_8cpp_8o_8d.html  algorithms_8cpp_source.html  algorithms_8h.html  batch_8cpp_8o_8d.html  batch_8h.html  batch_8h__dep__incl.dot  batch_8h__incl.dot  classEdge-members.html  classEdge__coll__graph.dot  classMutablePriorityQueue-members.html  classVertex-members.html  classVertex__coll__graph.dot  classes.html  dir_000001_000013.html  dir_000002_000000.html  dir_000003_000011.html  dir_000003_000013.html  dir_000004_000003.html  dir_000005_000003.html  dir_000011_000001.html  dir_000016_000003.html  dir_0a68f6a41534be0bb59f4e1a524cda4c.html  dir_25f57f09628b819e396ced06f26cf1ac.html  dir_25f57f09628b819e396ced06f26cf1ac_dep.dot  dir_2d63d4c72057eab9981b4c686db8058e.html  dir_5c097d287c9e4f49955bb4aeaab1b920_dep.dot  dir_6221353017ca33b62aacfd1661ef86b5.html  dir_6221353017ca33b62aacfd1661ef86b5_dep.dot  dir_6996d7c2da31c87b6af046372cf1d272_dep.dot  dir_6c96edbbfaf0943994058b98b0b25ac4.html  dir_871c0e3422be1e7341737de9f43b6b51.html  dir_9f636cf9f165886a5bd472e289c28d7c.html  dir_a143c551eab1690d4a994c9dcddb1368.html  dir_a143c551eab1690d4a994c9dcddb1368_dep.dot  dir_db6f6aacbaccf8ed55be78c07052c137_dep.dot  dir_e8e14b633ec5ed9fde2f3e986eb757ed_dep.dot  dir_ec5974339a1de2ed9600da4dc21f3a8e.html  displayBatch_8cpp_source.html  displayBatch_8h__dep__incl.dot  displayBatch_8h__incl.dot  (+26 more)
Project/SourceCode/: CMakeLists.txt  batchMode.h  main.cpp  menu.cpp
Project/SourceCode/Algorithms/: algorithms.cpp  algorithms.h
Project/SourceCode/BatchMode/: batch.cpp  batch.h
Project/SourceCode/BatchModeReader/: batchReader.cpp  batchReader.h
Project/SourceCode/Data/: input.txt  output.txt
Project/SourceCode/DisplayOutput/: displayBatch.cpp  displayBatch.h  displayMenu.cpp  displayMenu.h
Project/SourceCode/GraphStructure/: Graph.cpp  MutablePriorityQueue.h  graph.cpp  graph.h  loadGraph.cpp  loadGraph.h  mutablePriorityQueue.cpp  mutablePriorityQueue.h
Project/SourceCode/MenuMode/: menu.cpp  menu.h
Project1/: Doxyfile
Project1/Documentation/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  algorithms_8cpp.html  algorithms_8cpp__incl.dot  algorithms_8h__dep__incl.dot  algorithms_8h__incl.dot  algorithms_8h_source.html  annotated.html  batch_8cpp.html  batch_8cpp__incl.dot  batch_8cpp_source.html  batch_8h_source.html  classEdge.html  classGraph-members.html  classGraph.html  classMutablePriorityQueue.html  classVertex.html  dir_000000_000003.html  dir_000001_000000.html  dir_000001_000002.html  dir_000001_000003.html  dir_000003_000001.html  dir_000004_000000.html  dir_000004_000002.html  dir_000005_000001.html  dir_000005_000004.html  dir_000015_000001.html  dir_000015_000011.html  dir_000015_000013.html  dir_000016_000013.html  dir_000016_000015.html  dir_3328789a78c27f7e987fbab549e97d71.html  dir_3328789a78c27f7e987fbab549e97d71_dep.dot  dir_5c097d287c9e4f49955bb4aeaab1b920.html  dir_6996d7c2da31c87b6af046372cf1d272.html  dir_6c96edbbfaf0943994058b98b0b25ac4_dep.dot  dir_85951ca7dc14299ece64d86231c8c531.html  dir_85951ca7dc14299ece64d86231c8c531_dep.dot  (+45 more)
Project1/SourceCode/: CMakeLists.txt
Project1/SourceCode/Algorithms/: algorithms.h
Project1/SourceCode/BatchMode/: batch.h
Project1/SourceCode/Data/: input.txt  output.txt
Project1/SourceCode/DisplayOutput/: displayMenu.cpp  displayMenu.h
Project1/SourceCode/GraphStructure/: loadGraph.cpp  loadGraph.h
Project1/SourceCode/MenuMode/: menu.cpp  menu.h
Project2/: Doxyfile  README.md
Project2/SourceCode/: CMakeLists.txt  main.cpp
Project2/SourceCode/Algorithms/: algorithms.cpp  algorithms.h
Project2/SourceCode/DataStructures/: loadPallets.cpp  loadPallets.h  loadTruck.cpp  loadTruck.h  pallet.h  truck.h
Project2/SourceCode/DisplayResults/: displayResults.cpp  displayResults.h
Project2/SourceCode/SolverIlp/: input.txt  knapsack_solver.py
da2425_p01_student/TP1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  tests.cpp
da2425_p02_student/TP2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
da2425_p03_student/TP3/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp
da2425_p04_student/: CMakeLists.txt
da2425_p04_student/TP4/: ex1.cpp  ex2.cpp
da2425_p05_student/: CMakeLists.txt
da2425_p05_student/TP5/: ex1.cpp  ex2.cpp  ex3.cpp
da2425_p07_student/: CMakeLists.txt
da2425_p07_student/TP7/: ex1.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  exercises.h
(+180 files in other folders)
